Fix clone not working due to duplicated Paper world metadata in 26.1